k8s/app/overlays/gitops/patch-api-observability.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: gitops-demo
spec:
  template:
    metadata:
      annotations:
        lesson.gitops/demo-ts: "2026-06-25-0500"
      labels:
        observability: enabled
    spec:
      containers:
        - name: api
