k8s/app/overlays/gitops/patch-api-serviceaccount.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: gitops-demo
spec:
  template:
    spec:
      serviceAccountName: api-sa
