k8s/app/overlays/gitops/patch-postgres-storage.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: gitops-demo
spec:
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        storageClassName: gitops-demo-gp3
