k8s/app/overlays/gitops/patch-worker-serviceaccount.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: gitops-demo
spec:
  template:
    spec:
      serviceAccountName: worker-sa
