k8s/app/overlays/gitops/patch-sync-waves.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: gitops-demo
  annotations:
    argocd.argoproj.io/sync-wave: "2"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: gitops-demo
  annotations:
    argocd.argoproj.io/sync-wave: "2"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  namespace: gitops-demo
  annotations:
    argocd.argoproj.io/sync-wave: "2"
